Closed Bug 1514605 Opened 6 years ago Closed 5 years ago

Thunderbird crashes on startup if GTK_USE_PORTAL=1 is set

Categories

(Thunderbird :: General, defect, P1)

defect

Tracking

(thunderbird_esr6869+ fixed, thunderbird69 wontfix, thunderbird70 fixed, thunderbird71 fixed)

RESOLVED FIXED
Thunderbird 71.0
Tracking Status
thunderbird_esr68 69+ fixed
thunderbird69 --- wontfix
thunderbird70 --- fixed
thunderbird71 --- fixed

People

(Reporter: elvis.angelaccio, Assigned: mkmelin)

References

()

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:64.0) Gecko/20100101 Firefox/64.0 Steps to reproduce: Run `GTK_USE_PORTAL=1 thunderbird` Actual results: Thunderbird crashes on startup Expected results: Thunderbird should not crash, or at least fail gracefully if running with GTK_USE_PORTAL=1 is not supported.
Note that I cannot post a backtrace because archlinux doesn't ship debug symbols. But given that this crash is 100% reproducible I hope that someone else will be able to.
If you cannot get symbols with archlinux then please get a backtrace using https://archive.mozilla.org/pub/thunderbird/releases/60.3.3/linux-x86_64/en-US/
Thanks for the link, it doesn't crash using that package. I'll report the crash downstream.

I got same crash on Ubuntu with GTK_USE_PORTAL=1 environment variable set.

Here is Report contents for this crash:
Add-ons: gconversation%40xulforum.org:2.14.7,%7Ba300a000-5e21-4ee0-a115-9ec8f4eaa92b%7D:0.3.17b1,%7B972ce4c6-7e08-4474-a285-3208198ce6fd%7D:60.4.0,messagingmenu%40mozilla.com:1.4
BuildID: 20190115190018
ContentSandboxCapabilities: 119
ContentSandboxCapable: 1
ContentSandboxLevel: 0
CrashTime: 1548746230
Email: murznn@gmail.com
FramePoisonBase: 9223372036600930304
FramePoisonSize: 4096
InstallTime: 1548745720
Notes: Ubuntu 18.10FP(D00-L1100-W00000000-T000) OpenGL: Intel Open Source Technology Center -- Mesa DRI Intel(R) Haswell -- 3.0 Mesa 18.2.2 -- texture_from_pixmap
WR? WR- OMTP? OMTP-
ProductID: {3550f703-e582-4d05-9a08-453d09bdfdc6}
ProductName: Thunderbird
ReleaseChannel: release
SafeMode: 0
SecondsSinceLastCrash: 487409
StartupCrash: 0
StartupTime: 1548746229
TelemetryEnvironment: {"build":{"applicationId":"{3550f703-e582-4d05-9a08-453d09bdfdc6}","applicationName":"Thunderbird","architecture":"x86-64","buildId":"20190115190018","version":"60.4.0","vendor":null,"platformVersion":"60.4.0","xpcomAbi":"x86_64-gcc3","updaterAvailable":false},"partner":{"distributionId":null,"distributionVersion":null,"partnerId":null,"distributor":null,"distributorChannel":null,"partnerNames":[]},"system":{"memoryMB":7792,"virtualMaxMB":null,"cpu":{"count":4,"cores":2,"vendor":"GenuineIntel","family":6,"model":60,"stepping":3,"l2cacheKB":256,"l3cacheKB":3072,"speedMHz":3400,"extensions":["hasMMX","hasSSE","hasSSE2","hasSSE3","hasSSSE3","hasSSE4_1","hasSSE4_2","hasAVX","hasAVX2","hasAES"]},"os":{"name":"Linux","version":"4.18.0-13-generic","locale":"ru-RU"},"hdd":{"profile":{"model":null,"revision":null},"binary":{"model":null,"revision":null},"system":{"model":null,"revision":null}},"gfx":{"D2DEnabled":null,"DWriteEnabled":null,"ContentBackend":"Skia","adapters":[{"description":"Intel Open Source Technology Center -- Mesa DRI Intel(R) Haswell ","vendorID":"Intel Open Source Technology Center","deviceID":"Mesa DRI Intel(R) Haswell ","subsysID":null,"RAM":null,"driver":null,"driverVersion":"3.0 Mesa 18.2.2","driverDate":null,"GPUActive":true}],"monitors":[],"features":{"compositor":"none","gpuProcess":{"status":"unused"}}},"appleModelId":null},"settings":{"blocklistEnabled":true,"e10sEnabled":false,"e10sMultiProcesses":4,"telemetryEnabled":false,"locale":"en-US","update":{"channel":"release","enabled":true,"autoDownload":true},"userPrefs":{"browser.cache.disk.capacity":276480,"browser.search.region":"RU"},"sandbox":{"effectiveContentProcessLevel":0},"addonCompatibilityCheckEnabled":true,"isDefaultBrowser":null},"profile":{}}
ThreadIdNameMapping: 28980:"Gecko_IOThread",28981:"Link Monitor",28982:"Socket Thread",28983:"JS Watchdog",28990:"BGReadURLs",28991:"Hang Monitor",28996:"Timer",28997:"StreamTrans #1",28998:"Cache2 I/O",28999:"Cookie",29000:"GMPThread",29001:"SoftwareVsyncThread",29002:"Compositor",29003:"VRListener",29004:"ImgDecoder #1",29005:"ImageIO",29010:"IPDL Background",29011:"LoadRoots",29012:"DataStorage",29013:"DataStorage",29015:"mozStorage #1",29016:"HTML5 Parser",29020:"ImgDecoder #2",29021:"DOM Worker",29022:"ImageBridgeChild",
Throttleable: 1
UptimeTS: 1.03866891
Vendor:
Version: 60.4.0
useragent_locale: en-US

This report also contains technical information about the state of the application when it crashed.

I've experienced this same crash with Thunderbird 60.5.1 from the mozilla team's ppa on Ubuntu 18.10.

In my case, I had to first add a mail account and when autoconfiguration was complete and I hit done/continue thunderbird crashes. Any subsequent launches result in a crash until the cache+profile is removed (I'm not sure if removing both is necessary but it works).

un-setting GTK_USE_PORTAL and then launching thunderbird seems to work (no more crashes).

package details

Package: thunderbird
Version: 1:60.5.1+build1-0ubuntu0.18.10.1~mt1
Priority: optional
Section: mail
Maintainer: Ubuntu Mozilla Team <ubuntu-mozillateam@lists.ubuntu.com>

murz

We need your crash ID - see https://support.mozilla.org/en-US/kb/mozilla-crash-reporter-tb#w_viewing-crash-reports
(Unfortunately "crash details" isn't useful here)

Flags: needinfo?(murznn)

(In reply to Elvis Angelaccio from comment #3)

Thanks for the link, it doesn't crash using that package. I'll report the crash downstream.

Do you have a link?

Flags: needinfo?(elvis.angelaccio)

(In reply to Wayne Mery (:wsmwk) from comment #8)

(In reply to Elvis Angelaccio from comment #3)

Thanks for the link, it doesn't crash using that package. I'll report the crash downstream.

Do you have a link?

Sure: https://bugs.archlinux.org/task/61134

Flags: needinfo?(elvis.angelaccio)

Anyone else see crashes with this setting?

Flags: needinfo?(max.harmathy)
Flags: needinfo?(alessandro.menti)
Flags: needinfo?(murznn)
Flags: needinfo?(murznn)

I confirm I'm seeing the crash as well on TB 60.5.3 - since the Arch Linux build does not have debug symbols enabled, I'm recompiling the package to see if I can get a proper backtrace.

(In reply to Alessandro Menti from comment #13)

I confirm I'm seeing the crash as well on TB 60.5.3 - since the Arch Linux build does not have debug symbols enabled, I'm recompiling the package to see if I can get a proper backtrace.

Alessandro recompiling from http://ftp.mozilla.org/pub/thunderbird/releases/60.6.1/linux-x86_64/ ?
Did you have success?

And does this also happen with Firefox?

Severity: normal → critical
Keywords: crash

Hi Wayne,
I tried recompiling Thunderbird but, despite adding the proper configuration switches to add debug symbols, apparently the build process did not add them.

I can also confirm that the crash does not happen with Firefox (I tested it with the Arch Linux provided package, version 66.0.5-1).

Flags: needinfo?(alessandro.menti)
Flags: needinfo?(wls220spring)

Learned something new today. :)

No crash here starting Mozilla/5.0 (X11; Linux x86_64; rv:60.0) Gecko/20100101 Thunderbird/60.6.1 from Ubuntu with GTK_USE_PORTAL=1 thunderbird -p on Ubuntu 18.04.2 LTS.

I did get this message in the terminal.

"JavaScript error: jar:file:///usr/lib/thunderbird/omni.ja!/components/XULStore.js, line 65: Error: Can't find profile directory."

The Profile Manager opened anyway and I was able to use the associated profile.

I get the same error without using the -p switch.

Flags: needinfo?(wls220spring)

I've tested 6.70.0, 6.70.1, 68.0b1, and the daily on Ubuntu 19.04, all crash after all dialogs are closed and it seems (still needs a little more testing) at least one email account is setup.

Whats odd is that unless you explicitly set GTK_USE_PORTAL = 1 in the string to launch TB (i.e. 'GTK_USE_PORTAL=1 thunderbird') the bug is not triggered.

It also happens regardless to the value you give GTK_USE_PORTAL as 'GTK_USE_PORTAL=0 thunderbird'

Status: UNCONFIRMED → NEW
Ever confirmed: true

Here are the crash reports generated using the beta

bp-b5718f8c-7977-46a4-84b8-d190b0190618 <-- with 'GTK_USE_PORTAL=0 thunderbird'

bp-0fd780e4-9d38-4b70-b887-208e50190618 <-- with 'GTK_USE_PORTAL=1 thunderbird'

Crash Signature: [@ nsGNOMEShellService::checkDefault ]
Component: Untriaged → General
Summary: Thunderbird crashes on start if GTK_USE_PORTAL=1 is set → Thunderbird crashes on startup if GTK_USE_PORTAL=1 is set

FWIW, 12 crashes from the same person today, on 69.0b1

I am experiencing this crash on kubuntu 18.10 using thunderbird 60.8.0. Installed package is 60.8.0+build1-0ubuntu0.18.10.1
I set GTK_USE_PORTAL=1 in the '.profile' file in the home folder.
Could provide debugging backtrace/data.

This seems to be the only reference to GTK_USE_PORTAL in Mozilla's code.
https://searchfox.org/comm-central/source/mozilla/toolkit/system/gnome/nsGIOService.cpp#35

I'm going to start a regression search, and looking around the Mozilla code to see if there is something they set that we don't.

Will update at the end of the day.

Flags: needinfo?(benjamin)

So it seems this has been in the code a LONG time. So if it is a regression I haven't found it yet. I still find it odd that Firefox doesn't suffer from the same issue given we share so much of the code base.

Flags: needinfo?(benjamin)
Priority: -- → P1

Can't reproduce at least on trunk. But if the crash report numbers are correct, this would be the issue.

Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Attachment #9091741 - Flags: review?(jorgk)
Comment on attachment 9091741 [details] [diff] [review] bug1514605_GTK_USE_PORTAL.patch Typically for a QI, a bad status and returning null are synonymous. I wouldn't check both, but there's no harm done.
Attachment #9091741 - Flags: review?(jorgk) → review+
Keywords: checkin-needed

Seems fixed, GTK_USE_PORTAL=1 thunderbird goes to work well on Ubuntu 19.04 with thunderbird-mozilla-build_68.0-0ubuntu1_amd64.deb!
With thunderbird-mozilla-build_60.8.0-0ubuntu1_amd64.deb now there are no crash, but dialog is still GTK.
Can any of other subscribers confirm, that this is fixed too?

Flags: needinfo?(murznn)

Pushed by mozilla@jorgk.com:
https://hg.mozilla.org/comm-central/rev/aa6de4b5b0db
fix Thunderbird startup crash when GTK_USE_PORTAL=1 is set. r=jorgk

Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 71.0
Comment on attachment 9091741 [details] [diff] [review] bug1514605_GTK_USE_PORTAL.patch Shouldn't hurt.
Attachment #9091741 - Flags: approval-comm-esr68?
Attachment #9091741 - Flags: approval-comm-beta?
Attachment #9091741 - Flags: approval-comm-beta? → approval-comm-beta+
Attachment #9091741 - Flags: approval-comm-esr68? → approval-comm-esr68+

I am having this issue with the latest version 70.0b1 but I don't see any release for 70.0b2 so basically I cannot use thunderbird.
I can confirm that using the nightly there are no problems.

We'll release TB 70 beta 2 early next week.

Flags: needinfo?(max.harmathy)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: