Bug 1514605 - fix Thunderbird startup crash when GTK_USE_PORTAL=1 is set. r=jorgk